fix: left align headers

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -204,6 +204,7 @@ h6 {
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: normal;
+  text-align: left;
 }
 h1,
 h1 > a {
